devops/example-k8s/controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: akka-eventhubs-consumer-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: akka-eventhubs-consumer
        version: v1
    spec:
      containers:
        - name: akka-eventhubs-consumer
          image: navicore/akka-eventhubs-consumer:latest
          ports:
          - containerPort: 8080
