devops/example-k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /assessment/.*
        backend:
          serviceName: akka-eventhubs-consumer
          servicePort: 8080
